--- a/边缘智能网关.html
+++ b/边缘智能网关.html
@@ -48,24 +48,29 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (子菜单背景) -->
-
       <!-- Unnamed (矩形) -->
-      <div id="u166" class="ax_default box_2">
-        <div id="u166_div" class=""></div>
-        <div id="u166_text" class="text " style="display:none; visibility: hidden">
+      <div id="u165" class="ax_default box_2">
+        <div id="u165_div" class=""></div>
+        <div id="u165_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u167" class="ax_default link_button">
-        <div id="u167_div" class=""></div>
-        <div id="u167_text" class="text ">
+      <div id="u166" class="ax_default link_button">
+        <div id="u166_div" class=""></div>
+        <div id="u166_text" class="text ">
           <p><span>返回主页</span></p>
         </div>
       </div>
-      <div id="u165" style="display:none; visibility:hidden;"></div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u167" class="ax_default label">
+        <div id="u167_div" class=""></div>
+        <div id="u167_text" class="text ">
+          <p><span>边缘智能网关</span></p>
+        </div>
+      </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
